--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "dependencies": {
         "ws": ">=0.4.32",
         "busboy":">=0.2.9",
-        "cookie": "",
-        "mongodb": ">=1.4",
-        "mysql": ">=0"
+        "cookie": ">0",
+        "mongodb": ">=1.4"
     }
 }
